overflow fix on product list

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,8 +1,7 @@
 .products-wrapper  {
     width: 100%;
-    float: left;
     position: relative;
-    margin: 20px;
+    padding: 30px 0 60px;
 }
 
 .products-wrapper .product-inner-wrap {
